# SleepyDreamyV3

./: .gitignore  AGENTS.md  README.md  code_current.md  mlflow.db  profiling_plan.md  pyproject.toml  research.md  research_current.md
.github/workflows/: opencode.yml  pr-checks.yml
conf/: config.yaml
conf/env/: cartpole_state_only.yaml
conf/experiment/: baseline_seq64.yaml  scheduler.yaml
conf/sweep/: ac_params.yaml
env_configs/: cartpole.yaml  cartpole_128.yaml  cartpole_256.yaml  cartpole_64.yaml  cartpole_b128.yaml  cartpole_b16.yaml  cartpole_b32.yaml  cartpole_b64.yaml  cartpole_b8.yaml  cartpole_state_only.yaml  cartpole_state_only_small.yaml  cartpole_vision.yaml  lunarlander.yaml
experiments/2026-05-23_105610_CartPole-v1/.hydra/: config.yaml  hydra.yaml  overrides.yaml
plans/: critic_replay_loss_plan.md  critic_replay_loss_plan_final.md  critic_replay_loss_plan_v2.md
reports/: cartpole_current_instability.md  cartpole_parallel_capacity.md  runs.csv  runs.md
reports/profiling/: cartpole_capacity_1x.json  cartpole_capacity_1x_threads20.json  cartpole_capacity_2x.json  cartpole_capacity_3x.json  cartpole_capacity_4x.json
research/: TRAINING_LEARNINGS.md  plan.md  research.md
scripts/: clear_repo.sh  clear_runs.sh  evaluate_cartpole_checkpoints.py  index_runs.py  parallel_sweep.py  probe_cartpole_actor_supervision.py  probe_cartpole_carry_horizon.py  probe_cartpole_checkpoint_drift.py  probe_cartpole_continuation.py  probe_cartpole_continuation_supervision.py  probe_cartpole_critic_supervision.py  probe_cartpole_on_policy.py  probe_cartpole_policy_improvement.py  probe_cartpole_q.py  probe_cartpole_recovery_value_boundary.py  probe_cartpole_recovery_value_representability.py  probe_cartpole_rmsnorm_epsilon.py  probe_cartpole_rollout_fidelity.py  probe_slow_value_regularizer.py  profile_cartpole_capacity.py  summarize_cartpole_gradient_alignment.py  summarize_cartpole_replay_coverage.py  sweep_profile.py
src/: config.py  decoder.py  dream_visualizer.py  encoder.py  environment.py  evaluate.py  main.py  replay_buffer.py  train.py  trainer.py  trainer_utils.py  world_model.py
src/data/: __init__.py
src/dreamer/: config.py  evaluate.py  inspect.py  main.py  run_manifest.py  run_registry.py  visualize.py
src/envs/: __init__.py  collector.py
src/models/: dreaming.py  encoder.py  world_model.py
src/trainer/: __init__.py  checkpoints.py  core.py  dreaming.py  losses.py  math_utils.py  mlflow_logger.py  model_init.py  optimizers.py  profiling.py  visualization.py
src/utils/: __init__.py  config_loader.py  environment.py
tests/: test_cartpole_carry_horizon.py  test_cartpole_checkpoint_drift.py  test_cartpole_continuation_probe.py  test_cartpole_critic_supervision.py  test_cartpole_on_policy_probe.py  test_cartpole_policy_improvement_probe.py  test_cartpole_q_probe.py  test_cartpole_recovery_value_boundary.py  test_cartpole_recovery_value_representability.py  test_cartpole_rmsnorm_epsilon.py  test_cartpole_rollout_fidelity.py  test_checkpointing.py  test_cli_contract.py  test_config_contract.py  test_continuation_balance.py  test_continuation_supervision_probe.py  test_critic_loss_scaling.py  test_dynamic_config.py  test_easy_bandit_env.py  test_evaluate_cartpole_checkpoints.py  test_evaluation_seed.py  test_gradient_diagnostics.py  test_inspect_config.py  test_lambda_returns.py  test_laprop.py  test_mlflow_logger.py  test_model_broadcast.py  test_model_transport.py  test_observation_posterior_architecture.py  test_optimizer_contract.py  test_pixel_only_wm.py  test_process_contract.py  test_replay_buffer.py  test_replay_critic_targets.py  test_replay_value_gradients.py  test_return_normalizer.py  test_rssm_core.py  test_run_manifest.py  test_run_registry.py  test_slow_value_regularizer_probe.py  (+8 more)
(+126 files in other folders)
