[project]
name = "dreamer"
version = "0.1.0"
description = "PyTorch implementation of DreamerV3 - model-based reinforcement learning with learned world models"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium[box2d]>=1.2.1",
    "h5py>=3.15.1",
    "hydra-core>=1.3.2",
    "imageio[ffmpeg]>=2.37.2",
    "matplotlib>=3.10.7",
    "omegaconf>=2.3.0",
    "opencv-python>=4.12.0.88",
    "psutil>=7.1.3",
    "pydantic>=2.12.3",
    "swig>=4.3.1.post0",
    "mlflow>=2.10.0",
]

[project.optional-dependencies]
cpu = [
    "torch==2.9.1",
]
rocm = [
    "pytorch-triton-rocm; sys_platform == 'linux'",
    "torch==2.9.1; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "pyright==1.1.407",
    "pytest>=8.4.2",
]

[project.scripts]
dreamer-train = "dreamer.main:main"
dreamer-inspect = "dreamer.inspect:main"

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dreamer = [
    "conf/*.yaml",
    "conf/*/*.yaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-rocm", extra = "rocm" },
]
pytorch-triton-rocm = [
  { index = "pytorch-rocm", extra = "rocm" },
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "rocm" },
  ],
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.4"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
